--- a/FootballData/app/src/main/res/layout/fragment_competition.xml
+++ b/FootballData/app/src/main/res/layout/fragment_competition.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffeeeeee"
-    android:padding="@dimen/activity_horizontal_margin"
+    android:paddingLeft="@dimen/screen_horizontal_padding"
+    android:paddingRight="@dimen/screen_horizontal_padding"
     tools:context="com.tunghh.footballdata.views.CompetitionFragment">
 
 
