--- a/FootballData/app/src/main/res/layout/activity_main.xml
+++ b/FootballData/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:elevation="8dp"
             android:background="@color/colorPrimaryLight"
             app:tabMode="fixed"
             app:tabGravity="fill"/>
