--- a/FootballData/app/src/main/res/values/colors.xml
+++ b/FootballData/app/src/main/res/values/colors.xml
@@ -2,12 +2,15 @@
 <resources>
     <color name="colorPrimaryLight">#26A69A</color>
     <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00695C</color>
+    <!--<color name="colorPrimaryDark">#00796B</color>-->
     <color name="colorAccent">#80D8FF</color>
 
-    <color name="textColorPrimary">#fff</color>
-    <color name="textColorSecondary">#b3ffffff</color>
-    <color name="textColorLightBg">#8A000000</color>
+    <color name="textColorPrimaryLight">@android:color/white</color>
+    <color name="textColorSecondaryLight">#b3ffffff</color>
+    <color name="textColorPrimaryDark">#DE000000</color>
+    <color name="textColorSecondaryDark">#8A000000</color>
 
     <color name="colorHighLight">#B3E5FC</color>
+    <color name="colorBackground">#DDE0F7FA</color>
+    <color name="colorPrimaryDark">#00796B</color>
 </resources>
