--- a/FootballData/app/src/main/res/values/dimens.xml
+++ b/FootballData/app/src/main/res/values/dimens.xml
@@ -7,15 +7,29 @@
 
     <dimen name="font_very_large">24sp</dimen>
     <dimen name="font_large">18sp</dimen>
+    <dimen name="font_medium_large">16sp</dimen>
     <dimen name="font_medium">14sp</dimen>
     <dimen name="font_small">12sp</dimen>
 
-    <dimen name="cardview_corner">2dp</dimen>
-    <dimen name="cardview_maintext_paddingTop">24dp</dimen>
-    <dimen name="cardview_maintext_paddingBottom">16dp</dimen>
-    <dimen name="cardview_action_horizontal_spacing">8dp</dimen>
+    <dimen name="radius_small">2dp</dimen>
 
-    <dimen name="cardview_primary_text_boxPadding">16dp</dimen>
+    <dimen name="padding_1">8dp</dimen>
+    <dimen name="padding_2">16dp</dimen>
+    <dimen name="padding_3">24dp</dimen>
 
-    <dimen name="btn_height">36dp</dimen>
+    <dimen name="spacing_1">8dp</dimen>
+    <dimen name="spacing_2">56dp</dimen>
+
+    <dimen name="height_1">36dp</dimen>
+    <dimen name="height_2">60dp</dimen>
+    <dimen name="height_3">72dp</dimen>
+
+    <dimen name="cardview_corner">@dimen/radius_small</dimen>
+    <dimen name="cardview_maintext_paddingTop">@dimen/padding_3</dimen>
+    <dimen name="cardview_maintext_paddingBottom">@dimen/padding_2</dimen>
+    <dimen name="cardview_action_horizontal_spacing">@dimen/spacing_1</dimen>
+
+    <dimen name="cardview_primary_text_boxPadding">@dimen/padding_2</dimen>
+
+    <dimen name="btn_height">@dimen/height_1</dimen>
 </resources>
