--- a/FootballData/app/src/main/res/layout/activity_fixture.xml
+++ b/FootballData/app/src/main/res/layout/activity_fixture.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#F4F4F4"
+    android:background="@color/bg_screen"
     tools:context="com.tunghh.footballdata.views.FixtureActivity">
     <ScrollView
         android:layout_width="match_parent"
