--- a/FootballData/app/src/main/res/values/colors.xml
+++ b/FootballData/app/src/main/res/values/colors.xml
@@ -10,7 +10,14 @@
     <color name="textColorPrimaryDark">#DE000000</color>
     <color name="textColorSecondaryDark">#8A000000</color>
 
+    <color name="icon_inactive">#42000000</color>
+    <color name="icon_active">#8A000000</color>
+
     <color name="colorHighLight">#B3E5FC</color>
     <color name="colorBackground">#DDE0F7FA</color>
     <color name="colorPrimaryDark">#00796B</color>
+
+    <color name="bg_screen">#ECF1F1</color>
+    <color name="bg_team">#A9F7E8</color>
+    <color name="bg_team_action">#27D6B4</color>
 </resources>
